# data-contracts

./: AGENTS.md  CLAUDE.md  KNOWLEDGE.md  Makefile  PROJECT.md  README.md  meta-process.yaml  pyproject.toml
data_contracts/: __init__.py  decorator.py  models.py  registry.py
docs/: ARTIFACTS.md  CONCERNS.md  METHODOLOGY.md  SCHEMA_DIFF_EXAMPLE.md  SCHEMA_EVOLUTION.md  VALIDATION.md  wiki_manifest.yaml
docs/adr/: 0001_boundary_contract_substrate_scope.md
docs/ops/: CAPABILITY_DECOMPOSITION.md
docs/plans/: 01_governed-baseline-and-capability-ownership-rollout.md  CLAUDE.md  TEMPLATE.md
scripts/: declare_pipelines.py  inferred_deps.json  relationships.yaml
src/data_contracts/: __init__.py  __main__.py  check_schemas.py  checker.py  cli.py  decorator.py  models.py  registry.py
tests/: test_checker.py  test_contracts.py  test_decorator.py  test_registry.py
